Co-authored-by: Sam Hamby <Shamby3@users.noreply.github.com> Co-authored-by: Chimara Okeke <Echimara@users.noreply.github.com>

--- a/Front-end/main.html
+++ b/Front-end/main.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="main.js"></script>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <nav>
         <h2>Health Care</h2>
         <div class="loginContainer">
-            <li><a href="" class="patientLogin">Patient login</a></li>
-            <li><a href="" class="doctorLogin">Doctor login</a></li>
+            <li><button id="patientLogin">Patient login</button></li>
+            <li><button id="doctorLogin">Doctor login</button></li>
         </div>
     </nav>
+    <div>
+        
+    </div>
 </body>
+<script src="main.js"></script>
 </html>
