--- a/Front-end/main.html
+++ b/Front-end/main.html
@@ -14,8 +14,18 @@
             <li><button id="doctorLogin">Doctor login</button></li>
         </div>
     </nav>
-    <div>
-        
+    <div id="patientLoginContainer">
+        <form>
+            <h2>Patient Login</h2>
+            <div>
+                <label for="patientLoginUsernameInput"></label>
+                <input id="patientLoginUsernameInput" placeholder="Username">
+            </div>
+            <div>
+                <label for="patientLoginPasswordInput"></label>
+                <input id="patientLoginPasswordInput" placeholder="Password">
+            </div>
+        </form>
     </div>
 </body>
 <script src="main.js"></script>
