--- a/Front-end/main.html
+++ b/Front-end/main.html
@@ -6,27 +6,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body  class="homeback" >
     <nav>
-        <h2>Health Care</h2>
+        <h2>Go Physio</h2>
         <div class="loginContainer">
-            <li><button id="patientLogin">Patient login</button></li>
-            <li><button id="doctorLogin">Doctor login</button></li>
+            <li><button id="Login">Login</button></li>
+            <!--<li><button id="doctorLogin">Doctor login</button></li> -->
         </div>
     </nav>
-    <div id="patientLoginContainer">
-        <form>
-            <h2>Patient Login</h2>
-            <div>
-                <label for="patientLoginUsernameInput"></label>
-                <input id="patientLoginUsernameInput" placeholder="Username">
-            </div>
-            <div>
-                <label for="patientLoginPasswordInput"></label>
-                <input id="patientLoginPasswordInput" placeholder="Password">
-            </div>
-        </form>
-    </div>
+    <div>
+     </div>
+   
+
 </body>
 <script src="main.js"></script>
 </html>
